fix(style): adjust font-weight on headings

--- a/src/style/_typography.scss
+++ b/src/style/_typography.scss
@@ -6,7 +6,7 @@ h3,
 h4,
 h5,
 h6 {
-    font-weight: var(--f-font-weight-bold);
+    font-weight: var(--docs-font-weight);
     line-height: var(--f-line-height-medium);
     margin-top: 0;
     margin-bottom: 0.25rem;
