--- a/src/style/site.scss
+++ b/src/style/site.scss
@@ -3,6 +3,7 @@
 
 html {
     --docs-font-family: -apple-system, blinkmacsystemfont, "Segoe UI", roboto, "Helvetica Neue", ubuntu, arial, sans-serif;
+    --docs-font-weight: normal;
     --docs-menu-width-expanded: 230px;
 
     scroll-behavior: smooth;
@@ -11,7 +12,7 @@ html {
 html,
 body {
     font-family: var(--docs-font-family);
-    font-weight: normal;
+    font-weight: var(--docs-font-weight);
     font-size: var(--f-font-size-default-rem);
     min-width: 400px;
 
@@ -23,6 +24,6 @@ body {
 body {
     color: var(--f-text-color-default);
     font-size: var(--f-font-size-standard);
-    font-weight: var(--f-font-weight-normal);
+    font-weight: var(--docs-font-weight);
     line-height: var(--f-line-height-large);
 }
