fix(style): change font

--- a/src/style/site.scss
+++ b/src/style/site.scss
@@ -2,7 +2,7 @@
 @use "breakpoints" as *;
 
 html {
-    --docs-font-family: -apple-system, blinkmacsystemfont, "Segoe UI", roboto, "Helvetica Neue", ubuntu, arial, sans-serif;
+    --docs-font-family: arial, "Helvetica Neue", sans-serif;
     --docs-font-weight: normal;
     --docs-menu-width-expanded: 230px;
 
