docs: show avaialbe css variables

--- a/src/style/site.scss
+++ b/src/style/site.scss
@@ -1,16 +1,6 @@
+@use "css-variables";
 @use "reset";
 @use "breakpoints" as *;
-
-:root {
-    --docs-font-family: arial, "Helvetica Neue", sans-serif;
-    --docs-font-weight: normal;
-
-    --docs-heading-font-family: arial, "Helvetica Neue", sans-serif;
-    --docs-heading-font-weight: normal;
-    --docs-heading-line-height: 1.4;
-
-    --docs-menu-width-expanded: 230px;
-}
 
 html {
     scroll-behavior: smooth;
