docs: change theme names in selectfield (refs SFKUI-6627)

--- a/templates/partials/theme-select.html
+++ b/templates/partials/theme-select.html
@@ -3,8 +3,8 @@
         <label for="fkds-theme-select" class="label sr-only"> Tema </label>
         <div class="select-field__icon-wrapper">
             <select id="fkds-theme-select" class="select-field__select">
-                <option value="exp">Externportal</option>
-                <option value="int">Intern</option>
+                <option value="exp">Försäkringskassan</option>
+                <option value="int">FK Hapo</option>
             </select>
             <svg focusable="false" class="icon select-field__icon">
                 <use xlink:href="#docs-icon-arrow-down"></use>
