fix: fix broken search results when navigating from subdirectory

--- a/templates/partials/search-toolbar.html
+++ b/templates/partials/search-toolbar.html
@@ -1,5 +1,5 @@
 <div class="toolbar__item">
-    <form id="search" role="search" data-root-url="{{ rootUrl(doc) }}">
+    <form id="search" role="search">
         <button class="text-field__input" type="submit">
             <svg focusable="false" class="icon button__icon">
                 <use xlink:href="#docs-icon-search"></use></svg
