fix: fix theme selector being stored per directory instead of globally

--- a/templates/partials/theme-select.html
+++ b/templates/partials/theme-select.html
@@ -27,7 +27,7 @@
             }
 
             function setCookie(key, value) {
-                document.cookie = `${key}=${value}; expires=Fri, 31 Dec 9999 23:59:59 GMT; SameSite=strict`;
+                document.cookie = `${key}=${value}; path=/; expires=Fri, 31 Dec 9999 23:59:59 GMT; SameSite=strict`;
             }
 
             function enableTheme(theme) {
