--- a/templates/partials/version.njk.html
+++ b/templates/partials/version.njk.html
@@ -1,6 +1,6 @@
 {%- macro scmInfo(scm) -%}
-        {% if scm.pr %}<a href="{{ scm.prUrl }}">PR {{ scm.pr }}</a>{% endif %}
         {{ scm.branch }} (<a href="{{ scm.commitUrl }}">{{ scm.commitShort }}</a>)<br />
+        {% if scm.pr %}<a href="{{ scm.prUrl }}">PR {{ scm.pr }}</a><br />{% endif %}
         {{ build.date }} {{ build.time }}
 {%- endmacro -%}
 
