fix: try to fix nav icon size on older mobile devices

--- a/src/style/core.scss
+++ b/src/style/core.scss
@@ -222,6 +222,7 @@ header .imenu--horizontal .imenu__list__item {
 .sidenav__toggle {
     position: sticky;
     height: min-content;
+    width: min-content;
     padding: 0.5rem;
     cursor: pointer;
     appearance: none;
