--- a/src/style/_typography.scss
+++ b/src/style/_typography.scss
@@ -1,11 +1,11 @@
 @use "breakpoints" as *;
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h1:not(.code-preview h1),
+h2:not(.code-preview h2),
+h3:not(.code-preview h3),
+h4:not(.code-preview h4),
+h5:not(.code-preview h5),
+h6:not(.code-preview h6) {
     font-family: var(--docs-heading-font-family);
     font-weight: var(--docs-heading-font-weight);
     line-height: var(--docs-heading-line-height);
@@ -54,22 +54,27 @@ h6 {
     margin-top: 2rem;
 }
 
-@media (width >= $breakpoint-sm) {
+@media (width <=$breakpoint-sm) {
     h1 {
         font-size: var(--f-font-size-h2);
     }
+
     h2 {
         font-size: var(--f-font-size-xxx-large);
     }
+
     h3 {
         font-size: var(--f-font-size-h4);
     }
+
     h4 {
         font-size: var(--f-font-size-large);
     }
+
     h5 {
         font-size: var(--f-font-size-standard);
     }
+
     h6 {
         font-size: var(--f-font-size-standard);
     }
