--- a/src/style/core.scss
+++ b/src/style/core.scss
@@ -4,6 +4,7 @@
 @use "navigation";
 @use "outline";
 @use "selectable_version";
+@use "skeleton";
 @use "version_banner";
 
 /* reset broken FKUI reset */
@@ -382,6 +383,10 @@ main #aside dd {
 
 .code-preview code {
     margin: 0;
+}
+
+pre.mermaid:not([data-processed]) {
+    @include skeleton.skeleton-element;
 }
 
 .icon--code {
