--- a/docs/src/docs-theme.scss
+++ b/docs/src/docs-theme.scss
@@ -1,6 +1,6 @@
-@use "~@forsakringskassan/docs-generator/style/core";
-@use "~@forsakringskassan/docs-generator/style/site";
-@use "~@forsakringskassan/docs-live-example/dist/main";
+@use "@forsakringskassan/docs-generator/style/core";
+@use "@forsakringskassan/docs-generator/style/site";
+@use "@forsakringskassan/docs-live-example/dist/main";
 
 .mermaid p {
     margin-bottom: 0;
