--- a/docs/src/fkui.css
+++ b/docs/src/fkui.css
@@ -1938,3 +1938,47 @@ code.hljs {
 .imenu--horizontal .imenu__list__anchor-span {
     padding-right: 0.75rem;
 }
+
+.ipopupmenu {
+    background-color: var(--f-background-popupmenu, #ffffff);
+}
+
+.ipopupmenu__list {
+    margin: 0;
+    border: 1px solid var(--f-border-color-popupmenu, #ddddde);
+    padding: 0.5rem;
+}
+
+.ipopupmenu__list__item {
+    cursor: pointer;
+    list-style-type: none;
+    white-space: nowrap;
+}
+
+.ipopupmenu__list__item a,
+.ipopupmenu__list__item a:visited,
+.ipopupmenu__list__item a:active {
+    color: var(--f-text-color-popupmenu, #1b1e23);
+}
+
+.ipopupmenu__list__item a:hover {
+    color: var(--f-text-color-popupmenu-hover, #1b1e23);
+}
+
+.ipopupmenu--vertical .ipopupmenu__list {
+    display: block;
+}
+
+.ipopupmenu--vertical .ipopupmenu__list__item {
+    padding: 0.75rem;
+    display: block;
+}
+
+.ipopupmenu--vertical .ipopupmenu__list__item:hover {
+    background-color: var(--f-background-popupmenu-vertical-hover, #ddddde);
+}
+
+.ipopupmenu--vertical .ipopupmenu__list__item--highlight {
+    background-color: var(--f-background-popupmenu-vertical-highlight, #e7f0e9);
+    font-weight: var(--f-font-weight-medium, 700);
+}
