chore: support navbar overflow (refs SFKUI-6794)

--- a/src/style/core.scss
+++ b/src/style/core.scss
@@ -154,6 +154,7 @@ header .select-field {
 
 header .page-header__right {
     justify-content: space-between;
+    min-width: 0;
     max-width: 1260px;
     padding-top: 0;
     flex-wrap: wrap-reverse;
