fix: selectable version

--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -1,3 +1,4 @@
-<!-- prettier-ignore -->
-{%- block footer %}
-{%- endblock %}
+<div class="footer">
+    <!-- prettier-ignore -->
+    {% container "footer" %}
+</div>
