--- a/docs/src/docs-theme.scss
+++ b/docs/src/docs-theme.scss
@@ -80,3 +80,11 @@
         height: 1em;
     }
 }
+
+.footer {
+    background-color: #fff;
+    border-top: 1px solid #ddddde;
+    display: flex;
+    flex-direction: row-reverse;
+    padding: 2rem;
+}
