feat: new messagebox container for rendering messageboxes

--- a/src/style/core.scss
+++ b/src/style/core.scss
@@ -1,6 +1,7 @@
 @use "breakpoints" as bp;
 @use "typography";
 @use "layout";
+@use "messagebox";
 @use "navigation";
 @use "outline";
 @use "selectable_version";
