chore: use site.name as aria-lable in header (refs SFKUI-6500)

--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -1,7 +1,7 @@
 <div class="page-header__root">
     <div class="page-header">
         <a class="page-header__logo" href="{{ './index.html' | relative(doc) }}">
-            <span aria-label="Försäkringskassan" role="img" class="page-header__logo--small"> </span>
+            <span aria-label="{{ site.name }}" role="img" class="page-header__logo--small"> </span>
         </a>
         <a class="page-header__app-name" href="{{ './index.html' | relative(doc) }}"> {{ site.name }} </a>
         <div class="page-header__right">
