refactor: use a flag to determine whenever to render aside

--- a/templates/base.template.html
+++ b/templates/base.template.html
@@ -83,12 +83,12 @@
                 <main>
                     <!-- [html-validate-disable-next heading-level, no-unused-disable -- allowed sectioning root] -->
                     <h1 id="title">{{ doc.attributes.title }}</h1>
-                    {% set arr = ['component', 'pattern'] %} {% if doc.attributes.layout in arr %}
+
+                    {% if showAside %}
                     <div id="aside">
                         <!-- prettier-ignore -->
                         {%- block aside %}
                         {%- endblock %}
-
 
                         {% if doc.outline | length %}
                         <details id="outline">
