--- a/templates/component.template.html
+++ b/templates/component.template.html
@@ -1,4 +1,4 @@
-{% extends "content-with-menu.template.html" %}
+{% set showAside = true %} {% extends "content-with-menu.template.html" %}
 
 <!-- prettier-ignore -->
 {% block aside %}
