--- a/templates/pattern.template.html
+++ b/templates/pattern.template.html
@@ -1,4 +1,5 @@
-{% extends "content-with-menu.template.html" %}
+{% set showAside = true %} {% extends "content-with-menu.template.html" %}
+
 <!-- prettier-ignore -->
 {% block aside %}
 <dl>
