--- a/pr-preview/pr-92/layout/overriding-templates.html
+++ b/pr-preview/pr-92/layout/overriding-templates.html
@@ -35,10 +35,10 @@
 
         <link
             rel="preload"
-            href="../search-data-ac644a.json"
+            href="../search-data-5abe8a.json"
             as="fetch"
             crossorigin
-            integrity="sha384-lsuMwI0gtBeFvYG9hpRumSVQgTAbQUUxT1ff0cuC76SR52z1UDZln/16rYrujsrn"
+            integrity="sha384-U4kswOo384/8RySaLrqNZuYIYUdm4mnbubz5MuL4WQcFb81U+YEAvT/AyGl80+0b"
             id="search-data"
         />
     </head>
@@ -112,9 +112,9 @@
             >
                 <a
                     class="imenu__list__anchor "
-                    href="../navigation/"
+                    href="../markdown/"
                 >
-                    Navigation
+                    Markdown
                 </a>
             </div>
         </li>
@@ -126,9 +126,9 @@
             >
                 <a
                     class="imenu__list__anchor "
-                    href="../markdown/"
+                    href="../navigation/"
                 >
-                    Markdown
+                    Navigation
                 </a>
             </div>
         </li>
@@ -188,9 +188,9 @@
 </div>
 <div class="toolbar__item">
     <span class="version">
-        unknown (<a href="https://github.com/Forsakringskassan/docs-generator/commits/845f53be960d18a3324456439d2739c5fffac867">845f53b</a>)<br />
+        feature/article-template (<a href="https://github.com/Forsakringskassan/docs-generator/commits/c83db7222327f4e967d7d7ea611838208cf3bf8b">c83db72</a>)<br />
         <a href="https://github.com/Forsakringskassan/docs-generator/pull/92">PR 92</a><br />
-        2024-10-04 00:08
+        2024-10-04 00:21
     </span>
 </div>
 </div>
